@@ -1509,11 +1509,8 @@ static void j2k_read_sod(opj_j2k_t *j2k) {
 		truncate = 1;		/* Case of a truncate codestream */
 	}	
 
-	data = (unsigned char *) opj_malloc((j2k->tile_len[curtileno] + len) * sizeof(unsigned char));
-
-	for (i = 0; i < j2k->tile_len[curtileno]; i++) {
-		data[i] = j2k->tile_data[curtileno][i];
-	}
+	data = j2k->tile_data[curtileno];
+	data = (unsigned char*) opj_realloc(data, (j2k->tile_len[curtileno] + len) * sizeof(unsigned char));
 
 	data_ptr = data + j2k->tile_len[curtileno];
 	for (i = 0; i < len; i++) {
@@ -1521,7 +1518,6 @@ static void j2k_read_sod(opj_j2k_t *j2k) {
 	}
 
 	j2k->tile_len[curtileno] += len;
-	opj_free(j2k->tile_data[curtileno]);
 	j2k->tile_data[curtileno] = data;
 	
 	if (!truncate) {
